# session-6-dvc

./: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/: cml.yml
.github/workflows/: ci.yml  cml.yml
config/: eval.yaml  infer.yaml  train.yaml
config/data/: dog.yaml
config/model/: timm_classify.yaml  timm_vit_classify.yaml
config/trainer/: default.yaml
scripts/: generate_plots.py
src/: eval.py  infer.py  train.py
src/datamodules/: dog_datamodule.py
src/model/: timm_classifier.py
tests/: conftest.py  ignore_eval.py
